--- a/barcode-reader/src/App.css
+++ b/barcode-reader/src/App.css
@@ -22,7 +22,16 @@
 .App-link {
   color: #61dafb;
 }
-
+.content {
+  background-color:#999999;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  margin: 0 auto;
+  transition: 0.3s;
+  width: 90%;
+  padding: 1em;
+  border: 1px solid #CCC;
+  border-radius: 1em;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
