--- a/barcode-reader/src/index.css
+++ b/barcode-reader/src/index.css
@@ -1,13 +1,53 @@
 body {
+  background-color: #ffffff;
+  padding: 20px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+h1, h2, p, ul, li {
+  font-family: sans-serif;
+}
+ul.header li {
+  display: inline-block;
+  list-style-type: square;
+  margin: 0;
+}
+ul.header {
+  background-color: #111;
+  padding: 0;
+}
+ul.header li a {
+  color: #FFFF;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 18px;
+  display: inline-block;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.content h2 {
+  padding: 10px;
+  margin: 0;
+}
+.content li {
+  margin-bottom: 7%;
+}
+.active {
+  background-color: #0099FF;
+}
+form div + div {
+  margin-top: 1em;
+}
+label {
+  display: inline-block;
+  width: 50%;
+  text-align: right;
+}
+input{
+  font: 1em sans-serif;
+  width: 40%;
+  box-sizing: border-box;
+  border: 0.11em solid #999;
+}
+
+input:focus {
+  border-color: #000;
 }
