--- a/barcode-reader/src/BurgerMenu.css
+++ b/barcode-reader/src/BurgerMenu.css
@@ -36,15 +36,15 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-menu-wrap {
   position: fixed;
   height: 100%;
-  margin-left: -18px;
+  margin-left: -16px;
   margin-top: -30px;
-  margin-bottom: 100px;
+  margin-bottom: -100px;
 }
 
 /* General sidebar styles */
 .bm-menu {
   background: #373a47;
-
+  height: 100%;
   font-size: 1.15em;
 }
 
@@ -57,6 +57,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-item-list {
   color: #b8b7ad;
   padding: 1.1em 0.1em 0.1em;
+  height: 100%;
 }
 
 /* Individual item */
