--- a/barcode-reader/src/App.css
+++ b/barcode-reader/src/App.css
@@ -21,8 +21,8 @@ button:focus{
   color: #fefefe
 }
 .navbar-dark .navbar-toggler{
-  border-color: #000
-
+  border-color: #000;
+size:
 }
 .dropdown-divider{
   border-top:hidden;
