--- a/barcode-reader/src/Home.css
+++ b/barcode-reader/src/Home.css
@@ -12,8 +12,14 @@ body{
 @media only screen and (max-width: 816px){
   .title{
     font-size: 50px;
-
-
+  }
+  .text-center p-3{
+    width:33.33%;
   }
 
+}
+@media only screen and (max-width: 850px){
+  .text-center p-3{
+    width:33.33%;
+  }
 }
