--- a/barcode-reader/src/App.css
+++ b/barcode-reader/src/App.css
@@ -33,3 +33,9 @@ size:
 .dropdown-item.active, .dropdown-item:active{
   background-color: #000000
 }
+@media only screen and (min-width: 768px){
+img{
+margin-left: -54px
+}
+
+}
