--- a/barcode-reader/src/Home.css
+++ b/barcode-reader/src/Home.css
@@ -23,3 +23,12 @@ body{
     width:33.33%;
   }
 }
+@media only screen and (max-width: 430px){
+  .title{
+    font-size: 40px;
+  }
+}
+.col-6{
+  padding-left:0px;
+  padding-right:0px;
+}
