--- a/barcode-reader/src/App.css
+++ b/barcode-reader/src/App.css
@@ -33,9 +33,16 @@ size:
 .dropdown-item.active, .dropdown-item:active{
   background-color: #000000
 }
+.btn-dark{
+  background-color:transparent;
+  border-color:transparent;
+  color:transparent;
+  padding-top: 1px;
+  padding-bottom:1px;
+}
 @media only screen and (min-width: 768px){
-img{
-margin-left: -54px
+.rounded-circle{
+  visibility: hidden;
 }
 
 }
