--- a/barcode-reader/src/App.css
+++ b/barcode-reader/src/App.css
@@ -37,8 +37,32 @@ size:
   background-color:transparent;
   border-color:transparent;
   color:transparent;
-  padding-top: 1px;
-  padding-bottom:1px;
+  padding-top: 0px;
+  padding-bottom:0px;
+}
+.btn-success:hover{
+  color:transparent;
+  background-color:transparent;
+  border-color:transparent;
+    box-shadow:0 0 0 0 rgba(0, 0, 0, 0.5);;
+}
+.btn-success{
+  color:transparent;
+  background-color:transparent;
+  border-color:transparent;
+  margin-left: -0.3em;
+    box-shadow:0 0 0 0 rgba(0, 0, 0, 0.5);
+    padding-bottom: 0;
+    padding-top: 0;
+}
+.btn-success:not(:disabled):not(.disabled).active, .btn-success:not(:disabled):not(.disabled):active, .show>.btn-success.dropdown-toggle{
+  color:transparent;
+  background-color:transparent;
+  border-color:transparent;
+  box-shadow:0 0 0 0 rgba(0, 0, 0, 0.5);;
+}
+.btn-success:not(:disabled):not(.disabled).active:focus, .btn-success:not(:disabled):not(.disabled):active:focus, .show>.btn-success.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0  rgba(245, 78, 0, 0.5);
 }
 @media only screen and (min-width: 768px){
 .rounded-circle{
