--- a/barcode-reader/src/App.css
+++ b/barcode-reader/src/App.css
@@ -66,7 +66,9 @@ size:
 }
 @media only screen and (min-width: 768px){
 .rounded-circle{
+  position: relative;
   visibility: hidden;
+  margin-left: -50px;
 }
 
 }
